docs/v1.0.3/MapmyIndiaDirections.md
### [MapmyIndiaDirections](#MapmyIndiaDirections)

| Version | Dated | Description |
| :---- | :---- | :---- |
| `0.23.21` | 26 Jan, 2022 | Code imporvement and bug fixes.|
| `0.23.20` | 29 Dec, 2021 | Removed the dependency of Polyline.|
| `0.23.19` | 24 Dec, 2021 | Added support for xcode 13.2.1|
| `0.23.18` | 24 Dec, 2021 | Introduced a property in `Route` object i.e `geometry` to get the encoded polyline.|
| `0.23.17` | 28 Sep, 2021 | Added support for xcode 13 |
| `0.23.16` | 22 Sep, 2021 | Introduced `maneuverDegree` property in `RouteStep` class for improve rendring of roundabout maneuver, `maneuverId` are fixed which is retrived from short instruction. |
| `0.23.15` | 30 May, 2021 | xcode 12.5 compatibility. |
| `0.23.14` | 24 Feb, 2021 | xcode 12.4 compatibility. |
| `0.23.13` | 11 Jan, 2021 | In Directions locations can be set either an eLoc or comma seperated coordinate(In format longitude, latitude). |
| `0.23.12` | 09 Dec, 2020 | Xcode 12.2 compatibility. |
| `0.23.11` | 14 Oct, 2020 | Xcode 12 compatibility. |
| `0.23.10` | 03 June, 2020 | Xcode 11.5 compatibility. |
| `0.23.9` | 13 May, 2020 | While requesting for routes, by default value of routeShapeResolution i.e "overview" (request parameter) will be full. |
| `0.23.8` | 23 Apr, 2020 | Initial release on Pods. |
